More lints. Added participants-data.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,3 +3,6 @@ extend-select = ["RUF008"]
 
 [tool.pylint."MESSAGES CONTROL"]
 disable = ["C0114", "C0115", "C0116", "E0401", "W1201", "W1203", "W0511"]
+
+[tool.mypy]
+ignore_missing_imports = true
